# vellum

./: .gitignore  Cargo.toml  README.md  justfile
.claude/: CLAUDE.md  architecture.md
config/: config.toml
config/assets/: script.js  style.css  template.html
config/data/: index.md  skills.md  worklog.md
demo/: portfolio.html  rockband.html  vellum.html
demo/portfolio/config/: config.toml
demo/portfolio/config/assets/: style.css
demo/portfolio/data/: career-roadmap.md  feedback-log.md  index.md  learning-plan.md  projects.md  quarterly-goals.md  self-assessment.md  skills.md  worklog.md
demo/rockband/config/: config.toml
demo/rockband/config/assets/: style.css
demo/rockband/data/: index.md
demo/vellum/config/: config.toml
demo/vellum/config/assets/: style.css
demo/vellum/data/: features.md  getting-started.md  howto.md  index.md  technical.md  why.md
src/: lib.rs  main.rs
src/assets/: embedder.rs  mod.rs
src/parser/: document.rs  markdown.rs  mod.rs  sections.rs  skill_matrix.rs
src/renderer/: html.rs  mod.rs
tests/: integration.rs
